# codd_query_engine

./: .gitignore  .gitmodules  BACKLOG.md  CLAUDE.md  PROMQL_QUERY_EXPLAINER_README.md  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
codd_cli/: README.md  __init__.py  pyproject.toml
codd_cli/codd_cli/: __init__.py  cli.py
codd_cli/codd_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codd_cli/codd_cli/commands/: logs.py  metrics.py
codd_engine/: README.md  __init__.py  adskeywordsmini_copilot.py  pyproject.toml
codd_engine/agent/: roulette_agent_builder.py  roulette_agent_runner.py
codd_engine/config/: __init__.py  config.sample.yml  llm_settings.py
codd_engine/grammar/logs/: logql_grammar.lark  splunk_spl_grammar.lark
codd_engine/grammar/metrics/: promql_grammar.lark
codd_engine/logs/: __init__.py
codd_engine/models/: metrics_common.py
codd_engine/querygen_engine/custom_tool/: logql_validator_tool.py  promql_validator_tool.py  spl_validator_tool.py
codd_engine/querygen_engine/logs/: structured_inputs.py  structured_outputs.py
codd_engine/querygen_engine/metrics/: structured_outputs.py
codd_engine/semantic_engine/agent/: metrics_enrichment_agent.py
codd_engine/utils/: file_utils.py
codd_engine/validation_engine/: __init__.py  grammar_validator.py
codd_engine/validation_engine/logs/: __init__.py  log_query_validator.py  structured_outputs.py
codd_engine/validation_engine/metrics/: __init__.py  promql_validator.py  validator.py
codd_lib/: README.md  __init__.py  pyproject.toml
codd_lib/codd_lib/: __init__.py
codd_lib/codd_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
codd_lib/codd_lib/client/: __init__.py  codd_client.py  logs_client.py  logs_logql_client.py  logs_splunk_client.py  metrics_client.py  metrics_promql_client.py
codd_lib/codd_lib/config/: __init__.py  codd_config.py  debug_config.py  loki_config.py  prometheus_config.py  semantic_store_config.py
codd_lib/codd_lib/models/: __init__.py  logs.py
codd_mcp_server/: README.md  __init__.py  pyproject.toml  server.py
codd_service/: README.md  __init__.py  pyproject.toml
codd_service/codd_service/: __init__.py  main.py
codd_service/codd_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codd_service/codd_service/api/: __init__.py
codd_service/scripts/postman/: codd_service_collection.json
codd_service/tests/: __init__.py
maverick_cli/: README.md  __init__.py  pyproject.toml
maverick_cli/maverick_cli/: __init__.py  cli.py
maverick_cli/maverick_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
maverick_cli/maverick_cli/commands/: logs.py  metrics.py
maverick_cli/tests/integration/: test_cli_commands.py
maverick_dal/: pyproject.toml
maverick_dal/cache/: __init__.py  querygen_cache_client.py
maverick_dal/logs/: __init__.py  logql_query_executor.py
maverick_dal/logs/tests/: __init__.py  test_logql_query_executor.py
maverick_dal/metrics/: __init__.py  metrics_metadata_client.py  metrics_metadata_store.py  metrics_semantic_metadata_store.py  promql_client.py
maverick_dal/metrics/tests/: __init__.py  test_metrics_semantic_metadata_store.py  test_promql_client.py
maverick_engine/: README.md  __init__.py  adskeywordsmini_copilot.py  app.py  pyproject.toml
maverick_engine/agent/: roulette_agent_builder.py  roulette_agent_runner.py
maverick_engine/config/: __init__.py  config.sample.yml
maverick_engine/custom_tool/: roulette_wheel_tool.py
maverick_engine/grammar/graph/: README.md  cypher_grammar.lark
maverick_engine/grammar/logs/: splunk_spl_grammar.lark
maverick_engine/logs/: __init__.py  log_patterns.py
maverick_engine/models/: metrics_common.py
maverick_engine/prompts/agent/: ROULETTE_AGENT_INSTRUCTIONS.md
maverick_engine/querygen_engine/custom_tool/: logql_validator_tool.py  promql_validator_tool.py  spl_validator_tool.py
maverick_engine/querygen_engine/logs/: models.py  structured_inputs.py  structured_outputs.py
maverick_engine/querygen_engine/metrics/: structured_inputs.py  structured_outputs.py
maverick_engine/semantic_engine/: structured_outputs.py
maverick_engine/semantic_engine/agent/: metrics_enrichment_agent.py
maverick_engine/tests/: test_hello.py  test_hello_integration.py
maverick_engine/tests/validation_engine/: test_pydantic_metric_parser.py  test_schema_validator.py
maverick_engine/validation_engine/: __init__.py  grammar_validator.py  metric_expression_parser.py  pydantic_metric_parser.py  schema_validator.py
maverick_engine/validation_engine/agent/: promql_metricname_extractor_agent.py
maverick_engine/validation_engine/graph/: __init__.py
maverick_engine/validation_engine/logql/: logql_structured_outputs.py
maverick_engine/validation_engine/logs/: __init__.py  log_query_validator.py  structured_outputs.py
maverick_engine/validation_engine/metrics/: __init__.py  metrics_schema_validator.py  metrics_syntax_validator.py  promql_syntax_validator.py  validator.py  (+4 more)
maverick_lib/: README.md  __init__.py  pyproject.toml
maverick_lib/maverick_lib/: __init__.py
maverick_lib/maverick_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
maverick_mcp_server/: README.md  __init__.py  main.py  pyproject.toml  server.py
maverick_mcp_server/client/: __init__.py  logs_client.py  logs_logql_client.py  logs_splunk_client.py  maverick_client.py  metrics_client.py  metrics_promql_client.py
maverick_mcp_server/config/: __init__.py  loki_config.py  maverick_config.py  prometheus_config.py  semantic_store_config.py  splunk_config.py
maverick_mcp_server/tools/: __init__.py  logs.py  metrics.py
maverick_service/: README.md  __init__.py  pyproject.toml
maverick_service/maverick_service/: __init__.py  main.py
maverick_service/maverick_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
maverick_service/tests/: __init__.py  test_integration.py  test_logs_controller.py  test_metrics_controller.py  test_service.py
(+364 files in other folders)
