[project]
name = "maverick"
version = "0.1.0"
description = "Maverick - Multi-module data platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maverick-dal",
    "maverick-engine",
    "maverick-service",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "fakeredis>=2.0.0",
]

[tool.uv.sources]
maverick-dal = { workspace = true }
maverick-engine = { workspace = true }
maverick-service = { workspace = true }

[tool.uv.workspace]
members = ["maverick_dal", "maverick_engine", "maverick_service"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
testpaths = ["maverick_engine/tests", "maverick_dal/tests", "maverick_service/tests"]
