[project]
name = "maverick"
version = "0.1.0"
description = "Maverick - Multi-module data platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maverick-dal",
    "maverick-engine",
    "maverick-service",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.39.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "fakeredis>=2.0.0",
]

[tool.uv.sources]
maverick-dal = { workspace = true }
maverick-engine = { workspace = true }
maverick-service = { workspace = true }
opus-agent-base = { path = "../opus_agents/opus_agent_base" }

[tool.uv.workspace]
members = ["maverick_dal", "maverick_engine", "maverick_service"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]
