[project]
name = "maverick"
version = "0.1.0"
description = "Maverick - Multi-module data platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.1",
    "maverick-dal",
    "maverick-engine",
    "maverick-service",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.39.0",
    "pydantic-ai-slim[logfire]>=1.39.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "fakeredis>=2.0.0",
    "ruff>=0.14.10",
    "pre-commit>=4.0.0",
    "hypothesis>=6.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
maverick-dal = { workspace = true }
maverick-engine = { workspace = true }
maverick-service = { workspace = true }
opus-agent-base = { path = "../opus_agents/dist/opus_agent_base-0.1.0-py3-none-any.whl" }

[tool.uv.workspace]
members = [
    "maverick_dal",
 "maverick_engine",
 "maverick_service",
 "maverick_mcp_server",
 "maverick_lib",
 "maverick_cli",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "integration_querygen_evals: marks tests as property-based integration tests for query generation evaluations",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]
asyncio_mode = "auto"
