[project]
name = "codd-mcp-server"
version = "0.1.0"
description = "Codd MCP Server - FastMCP-based observability tools"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.1",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

# No workspace dependencies needed - uses HTTP client to connect to Codd service

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["codd_mcp_server"]
