[project]
name = "codd-service"
version = "0.1.0"
description = "Codd Service - FastAPI REST service for Codd query engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "codd-dal",
    "codd-engine",
    "codd-lib",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "pydantic-ai-slim[logfire]>=1.39.0",
]

[project.scripts]
codd-service = "codd_service.main:main"

[tool.uv.sources]
codd-dal = { workspace = true }
codd-engine = { workspace = true }
codd-lib = { workspace = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["codd_service"]
