[project]
name = "maverick-cli"
version = "0.1.0"
description = "Maverick CLI - Command-line interface for observability operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maverick-lib",
    "typer>=0.19.2",
    "rich>=13.0.0",
]

[project.scripts]
maverick = "maverick_cli.cli:app"

[tool.uv.sources]
maverick-lib = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["maverick_cli"]
