[project]
name = "maverick-dal"
version = "0.1.0"
description = "Maverick Data Access Layer - Database and storage abstractions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.0.0",
    "fakeredis>=2.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
