[project]
name = "maverick-engine"
version = "0.1.0"
description = "Maverick Engine - Query processing and validation engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maverick-dal",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.30",
    "openai>=1.0.0",
    "tenacity>=8.0.0",
]

[tool.uv.sources]
maverick-dal = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
