[project]
name = "maverick-service"
version = "0.1.0"
description = "Maverick Service - API and business logic layer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maverick-dal",
    "maverick-engine",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[tool.uv.sources]
maverick-dal = { workspace = true }
maverick-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
