[project]
name = "maverick-service"
version = "0.1.0"
description = "Maverick Service - FastAPI REST service for Maverick query engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maverick-dal",
    "maverick-engine",
    "maverick-lib",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "pydantic-ai-slim[logfire]>=1.39.0",
]

[project.scripts]
maverick-service = "maverick_service.main:main"

[tool.uv.sources]
maverick-dal = { workspace = true }
maverick-engine = { workspace = true }
maverick-lib = { workspace = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["maverick_service"]
